# Test

./: .gitignore  ConvertUTF.cpp  ConvertUTF.h  Makefile  README.md  Util.cpp  Util.h  log.cpp  log.h  main.cpp
.github/workflows/: c-cpp.yml
test_cmake/: CMakeLists.txt  Readme.md
test_cmake/sub/: CMakeLists.txt
test_ini/: ConvertUTF.h  Makefile  Util.cpp  Util.h  log.cpp  log.h  main.cpp
test_modern_cpp/: CMakeLists.txt
